k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: homelab
spec:
  selector:
    app: fastapi
  ports:
    - port: 8003
      targetPort: 8003
